--- a/about/index.html
+++ b/about/index.html
@@ -49,7 +49,7 @@
   
     <a class="color-link nav-link" href="/teaching/">Teaching</a>
   
-    <a class="color-link nav-link" href="https://www.dropbox.com/s/9taoj477o06zlth/cv2020.pdf?dl=0">CV</a>
+    <a class="color-link nav-link" href="/cv2020.pdf">CV</a>
   
 </div>
 <footer class="footer">
@@ -146,7 +146,7 @@
 
 <p><span style="font-size:10pt">I&rsquo;m originally from Busan, South Korea, but frequently moved from place to place. After moving back and forth between Busan and Plainsboro, New Jersey, I settled in Champaign, Illinois for a while, attending high school and a few years of undergraduate years. Third year in college, I went to London on a study abroad program to the London School of Economics (LSE) and fell in love with the city-life. Vowing not to return to the sweet corn countryside, I transferred to Korea University in Seoul, Korea. I settled there for quite a while (about 5 and half years), but fate led me back to Illinois. This time, I was in Chicago, studying political theory at the University of Chicago. After graduating from the short, one-year master&rsquo;s program, I relocated to Shanghai, China and taught English writing. Funny enough, I was accepted to the Ph.D. program at the University of Illinois at Urbana-Champaign. After 7 and half years of city-roaming, I finally broke my vow and returned to the sweet courn countryside.</span></p>
 <p><span style="font-size:10pt"> When not doing poli-sci work, I&rsquo;m a big traveller, music lover, and a passionate cook. I&rsquo;ve been to over 30 countries in three continents and counting. I&rsquo;ve been playing the electric guitar for over 15 years, although I&rsquo;ve stopped playing after leaving chicago (I had to leave the guitar in a storage when relocating to China, and I never got back to playing). Finally, I spend most nights greesing my stainless frying pans before returning to reading some quality bedtime poli-sci articles. </span></p>
-<p><span style="font-size:10pt"> My academic life/journey is nicely presented in my CV. Check it out <a href="https://www.dropbox.com/s/9taoj477o06zlth/cv2020.pdf?dl=0">here</a>. </span></p>
+<p><span style="font-size:10pt"> My academic life/journey is nicely presented in my CV. Check it out <a href="https://mastad90.github.io/cv2020.pdf">here</a>. </span></p>
 
         </p>
     </div>
